# AIConsumptionTracker

./: .actionlint.yaml  .editorconfig  .gitignore  .gitleaks.toml  .gitleaksbaseline.json  AGENTS.md  AIUsageTracker.sln  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Directory.Build.props  README.md  SONARQUBE.md  TODO.md  UI_usage.sln  appcast.xml  appcast_arm64.xml  appcast_x86.xml  changelog.md  memory.md  setup.iss  task.md  tasks.md  test_output.txt
.github/: test-quarantine.txt
AIConsumptionTracker.Agent/: AIConsumptionTracker.Agent.csproj  Program.cs  openapi.yaml
AIConsumptionTracker.CLI/: AIConsumptionTracker.CLI.csproj  Program.cs
AIConsumptionTracker.Core/: AIConsumptionTracker.Core.csproj  Class1.cs
AIConsumptionTracker.Infrastructure/: AIConsumptionTracker.Infrastructure.csproj  Class1.cs
AIConsumptionTracker.Tests/: AIConsumptionTracker.Tests.csproj  UnitTest1.cs
AIConsumptionTracker.UI/: AIConsumptionTracker.UI.csproj  App.xaml  App.xaml.cs  InfoDialog.xaml  InfoDialog.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
AIConsumptionTracker.UI.Slim/: AIConsumptionTracker.UI.Slim.csproj  App.xaml.cs  InfoDialog.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
AIConsumptionTracker.UI.Tests/: HeadlessWpfTests.cs  PrivacyTests.cs  UpdateProviderBarTests.cs
AIConsumptionTracker.Web/: AIConsumptionTracker.Web.csproj  Program.cs
AIConsumptionTracker.Web.Tests/: ScreenshotTests.cs
AIUsageTracker.CLI/: AIUsageTracker.CLI.csproj  AppJsonContext.cs  Program.cs
AIUsageTracker.Core/: AIUsageTracker.Core.csproj
AIUsageTracker.Infrastructure/: AIUsageTracker.Infrastructure.csproj
AIUsageTracker.Monitor/: AIUsageTracker.Monitor.csproj  Program.cs  openapi.yaml
AIUsageTracker.Monitor.Tests/: AIUsageTracker.Monitor.Tests.csproj  AuthDiagnosticsSnapshotBuilderTests.cs  ConfigServiceScanTests.cs  ExportServiceTests.cs  GroupedUsageProjectionServiceTests.cs  MonitorJobSchedulerTests.cs  ProviderRefreshCircuitBreakerServiceTests.cs  ProviderRefreshConfigLoadingServiceTests.cs  ProviderRefreshConfigSelectorTests.cs  ProviderRefreshJobSchedulerTests.cs  ProviderRefreshNotificationServiceTests.cs  ProviderRefreshServiceTests.cs  ProviderUsageProcessingPipelineTests.cs  UsageAlertsServiceTests.cs
AIUsageTracker.Tests/: AIUsageTracker.Tests.csproj
AIUsageTracker.UI.Slim/: AIUsageTracker.UI.Slim.csproj  App.Screenshots.cs  App.Themes.cs  App.TrayIcon.cs  App.xaml.cs  CardCatalogPermutations.cs  CardDesignerWindow.xaml  CardDesignerWindow.xaml.cs  DeterministicProviderScenarioCatalog.cs  FixtureUsageScenario.cs  FlatWindowCardBuilder.cs  GroupedUsageDisplayAdapter.cs  InfoDialog.xaml  InfoDialog.xaml.cs  LegacyParentCardBuilder.cs  MainWindow.Polling.cs  MainWindow.Rendering.cs  MainWindow.Updates.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindowDeterministicFixture.cs  MainWindowRuntimeLogic.Presentation.cs  MainWindowRuntimeLogic.cs  MonitorToggleButtonPresentation.cs  MonitorToggleButtonPresentationCatalog.cs  PrivacyButtonPresentation.cs  PrivacyButtonPresentationCatalog.cs  ProviderApiKeyPresentationCatalog.cs  ProviderAuthIdentityDiscovery.cs  ProviderCapabilityCatalog.cs  (+33 more)
design/: README.md  (+5 more)
rust/aic_agent/: Cargo.toml
rust/aic_agent/scripts/: aic-agent.service  install-service.ps1  install.sh
rust/aic_agent/src/: api.rs  config.rs  lib.rs  main.rs  polling.rs
rust/aic_app/: Cargo.toml  build.rs  tauri.conf.json
rust/aic_app/capabilities/: main.json
rust/aic_app/src/: commands.rs  index.html  info.html  main.rs  settings.html
rust/aic_app/tests/: commands_tests.rs
rust/aic_app/www/: index.html  info.html  settings.html
rust/aic_app/www/css/: index.css  info.css  main.css  settings.css
rust/aic_app/www/js/: index.js  info.js  settings.js  utils.js
rust/aic_app/www/lib/: htmx-components.js  htmx-config.js
rust/aic_cli/: Cargo.toml
rust/aic_cli/src/: main.rs
rust/aic_cli/tests/: status_presenter_tests.rs
rust/aic_core/: Cargo.toml
rust/aic_core/src/: auth_manager.rs  config.rs  github_auth.rs  lib.rs  models.rs  privacy.rs  provider.rs
rust/aic_core/src/providers/: anthropic.rs  antigravity.rs  cloud_code.rs  codex.rs  deepseek.rs  gemini.rs  generic_payg.rs  github_copilot.rs  kimi.rs  minimax.rs  minimax_io.rs  mod.rs  openai.rs  opencode.rs  opencode_zen.rs  openrouter.rs  simulated.rs  synthetic.rs  xiaomi.rs  zai.rs
rust/aic_core/tests/: auth_manager_tests.rs  config_tests.rs  mocks.rs  model_tests.rs  provider_tests.rs
rust/aic_database/: Cargo.toml
rust/aic_database/src/: lib.rs
(+513 files in other folders)
