[package]
name = "aic_agent"
version = "1.0.0"
edition = "2021"
description = "AI Consumption Tracker Collection Agent - Background service for collecting provider usage data"

[features]
default = []
sqlite = []
turso = []

[dependencies]
aic_core = { path = "../aic_core" }
aic_database = { path = "../aic_database" }

# CLI
clap = { version = "4.4", features = ["derive"] }

# HTTP server
actix-web = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.8"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging
env_logger = "0.10"
log = "0.4"

# Utility
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
reqwest = "0.11"

[dev-dependencies]
tempfile = "3.10"
