[package]
name = "aic_app"
version = "1.0.0"
edition = "2021"
description = "AI Consumption Tracker Desktop Application"
authors = ["AI Consumption Tracker Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/ai-consumption-tracker"

[build-dependencies]
tauri-build = "2.0.0"

[dependencies]
aic_core = { path = "../aic_core" }
aic_database = { path = "../aic_database", optional = true }
tauri = { version = "2.0.0", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-updater = "2.0.0"
serde = "1.0.210"
serde_json = "1.0.149"
tokio = "1.41.1"
reqwest = { version = "0.11.27", features = ["json"] }
log = "0.4.29"
chrono = "0.4.43"

[features]
default = ["database"]
database = ["aic_database"]

[dev-dependencies]
tempfile = "3.24.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
