[package]
name = "aic_cli"
version = "1.0.0"
edition = "2021"
description = "AI Consumption Tracker CLI"
authors = ["AI Consumption Tracker Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/ai-consumption-tracker"

[[bin]]
name = "opencode-tracker"
path = "src/main.rs"

[dependencies]
aic_core = { path = "../aic_core" }
aic_database = { path = "../aic_database", optional = true }
clap = { version = "4.4.18", features = ["derive"] }
tokio = "1.41.1"
serde = "1.0.210"
serde_json = "1.0.149"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.29"
reqwest = { version = "0.11.27", features = ["json"] }
chrono = "0.4.43"

[features]
default = ["database"]
database = ["aic_database"]

[profile.release]
opt-level = 3
lto = true
strip = true
