[package]
name = "aic_core"
version = "1.0.0"
edition = "2021"
description = "Core library for AI Consumption Tracker"
authors = ["AI Consumption Tracker Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/ai-consumption-tracker"

[dependencies]
serde = "1.0.210"
serde_json = "1.0.149"
tokio = "1.41.1"
reqwest = { version = "0.11.27", features = ["json", "blocking"] }
directories = "5.0.1"
chrono = "0.4.43"
thiserror = "2.0.18"
log = "0.4.29"
async-trait = "0.1.83"
regex = "1.12.3"
which = "6.0.3"

[target.'cfg(windows)'.dependencies]
wmi = "0.14.0"
windows = "0.52.0"

[dev-dependencies]
tokio-test = "0.4.5"
tempfile = "3.24.0"
